# dll_detours_hook

./: .gitignore  CMakeLists.txt  README.md  build.cmd  supported-apps.md
dll_detours_hook/: HookRegistry.cpp  HookRegistry.h  binmain.cpp  binmain.h  dll_detours_hook.cpp  dll_detours_hook.h
dll_detours_hook/apps/: DemoHook.cpp  DemoHook.h  HookAdapter.cpp  HookAdapter.h
dll_detours_hook/utils/: DetourUtils.cpp  DetourUtils.h  Logger.h  RegistryUtils.cpp  RegistryUtils.h  StringUtils.cpp  StringUtils.h
libs/: detours.lib
release/: EMPTY  dll_detours_hook.lib
script/: cmake_debugger.bat
tools/: README.md
